feat: finished the html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
     <header>
       <img src="./logo.png" height="68" width="68" alt="Today I Learned Logo" />
       <h1>Today I learned!</h1>
+      <button>Share a fact</button>
     </header>
+
+    <form>
+      <input type="text" placeholder="Share a fact with the world..." />
+      <span>200</span>
+      <input type="text" placeholder="Trustworthy source..." />
+      <select>
+        <option value="">Choose category:</option>
+        <option value="technology">Technology</option>
+        <option value="science">Science</option>
+        <option value="finance">Finance</option>
+      </select>
+      <button>Post</button>
+    </form>
 
     <main>
       <aside>
@@ -33,6 +47,11 @@
               <a href="https://opensource.fb.com/" target="_blank">(source)</a>
               <span>technology</span>
             </p>
+            <div>
+              <button>👍️ <strong>24</strong></button>
+              <button>🤯️ <strong>9</strong></button>
+              <button>⛔️ <strong>4</strong></button>
+            </div>
           </li>
           <li>
             <p>
@@ -46,6 +65,11 @@
               >
               <span>society</span>
             </p>
+            <div>
+              <button>👍️ <strong>1</strong></button>
+              <button>🤯️ <strong>2</strong></button>
+              <button>⛔️ <strong>0</strong></button>
+            </div>
           </li>
         </ul>
       </section>
