--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./style.css" />
+
     <title>Today I learned!</title>
   </head>
   <body>
     <header>
       <img src="./logo.png" height="68" width="68" alt="Today I Learned Logo" />
-      <h1>Today I learned!</h1>
+      <h1>Today I learned</h1>
       <button>Share a fact</button>
     </header>
 
