--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(source)</a>
-              <span class="tag">technology</span>
+              <span class="tag" style="background-color: #3b82f6"
+                >technology</span
+              >
             </p>
             <div>
               <button>👍️ <strong>24</strong></button>
@@ -73,7 +75,7 @@
                 target="_blank"
                 >(source)</a
               >
-              <span class="tag">society</span>
+              <span class="tag" style="background-color: #eab308">society</span>
             </p>
             <div>
               <button>👍️ <strong>1</strong></button>
