--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@400;600&display=swap"
       rel="stylesheet"
     />
 
@@ -83,9 +83,9 @@
                 >technology</span
               >
               <div class="vote-buttons">
-                <button>👍️ <strong>24</strong></button>
-                <button>🤯️ <strong>9</strong></button>
-                <button>⛔️ <strong>4</strong></button>
+                <button>👍️ 24</button>
+                <button>🤯️ 9</button>
+                <button>⛔️ 4</button>
               </div>
             </li>
             <li class="fact">
@@ -102,9 +102,9 @@
               </p>
               <span class="tag" style="background-color: #eab308">society</span>
               <div class="vote-buttons">
-                <button>👍️ <strong>1</strong></button>
-                <button>🤯️ <strong>2</strong></button>
-                <button>⛔️ <strong>0</strong></button>
+                <button>👍️ 1</button>
+                <button>🤯️ 2</button>
+                <button>⛔️ 0</button>
               </div>
             </li>
           </ul>
